--- a/dang-thats-delicious/views/mixins/_storeCard.pug
+++ b/dang-thats-delicious/views/mixins/_storeCard.pug
@@ -2,9 +2,11 @@ mixin storeCard(store = {})
   .store
     .store__hero
       .store__actions
-        .store__action.store__action--edit
-          a(href=`/stores/${store._id}/edit`)
-            != h.icon('pencil')
+        //- // console.log(store.author)
+        if user && store.author.equals(user._id) // only display the edit pencil if the user matches the stores owner/user_id // see number 29, last 2 minutes about having admin users
+          .store__action.store__action--edit
+            a(href=`/stores/${store._id}/edit`)
+              != h.icon('pencil')
             // ^ this accesses helpers.js line 18 for inserting an SVG icon
       img(src=`/uploads/${store.photo || 'store.png'}`)
       h2.title
