--- a/dang-thats-delicious/views/mixins/_storeCard.pug
+++ b/dang-thats-delicious/views/mixins/_storeCard.pug
@@ -2,6 +2,13 @@ mixin storeCard(store = {})
   .store
     .store__hero
       .store__actions
+        if user
+          .store__action.store__action--heart
+            form.heart(method="POST" action=`/api/stores/${store._id}/heart`)
+              - const heartStrings = user.hearts.map(obj => obj.toString())
+              - const heartClass = heartStrings.includes(store._id.toString()) ? 'heart__button--hearted' : ""
+              button.heart__button(type="submit" name="heart" class=heartClass)
+                != h.icon('heart')
         //- // console.log(store.author)
         if user && store.author.equals(user._id)
         // only display the edit pencil if the user matches the stores owner/user_id // see number 29, last 2 minutes about having admin users
