--- a/dang-thats-delicious/views/mixins/_storeCard.pug
+++ b/dang-thats-delicious/views/mixins/_storeCard.pug
@@ -16,6 +16,10 @@ mixin storeCard(store = {})
             a(href=`/stores/${store._id}/edit`)
               != h.icon('pencil')
             // ^ this accesses helpers.js line 18 for inserting an SVG icon
+        if store.reviews
+          .store__action.store__action--count
+            != h.icon('review')
+            span= store.reviews.length
       img(src=`/uploads/${store.photo || 'store.png'}`)
       h2.title
         a(href=`/store/${store.slug}`) #{store.name}
